--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/niceshop
+spring.datasource.username=niceshopadmin
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+server.port=8080
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+
+
+spring.mustache.suffix=.mustache
+spring.mustache.prefix=classpath:/
+spring.mustache.expose-request-attributes=true
