--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.13.Final</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-core</artifactId>
+            <version>2.5.2</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
