--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/niceshop
 spring.datasource.username=niceshopadmin
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
 
 server.port=8080
 
@@ -10,7 +10,5 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
 
-spring.mustache.suffix=.mustache
-spring.mustache.prefix=classpath:/
-spring.mustache.expose-request-attributes=true
+
 
