Added product service (raw, need refactoring) Added FileUtils to add files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/niceshop
 spring.datasource.username=niceshopadmin
 spring.datasource.password=password
 spring.jpa.show-sql=false
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 
 server.port=8080
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+spring.main.allow-bean-definition-overriding=true
+
+file.images=/Users/Timash/Desktop/niceshop/sss/
 
 
 
