--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/niceshop
 spring.datasource.username=niceshopadmin
 spring.datasource.password=password
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
 server.port=8080
