Added product pictures edit Cards on main page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/niceshop
 spring.datasource.username=niceshopadmin
-spring.datasource.password=password
+spring.datasource.password=aezakmi123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
@@ -9,8 +9,6 @@ server.port=8080
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 spring.main.allow-bean-definition-overriding=true
-
-file.images=/Users/Timash/Desktop/niceshop/sss/
 
 
 
